test/shouldFail/mismatchedReturn.pas
program Sample;

function foo() : integer;
var
    x : string;
begin
    foo := x;
end;

begin
  writeln(foo());
end.